@@ -97,4 +97,4 @@ static unsigned char romDump8Xp[] = {
 0x30, 0x4b, 0x20, 0x6f, 0x66, 0x20, 0x00, 0x00, 
 0x34, 0x12, 0x35, 0x1f, 
 };
-static int romDumpSize8Xp = 772;
+static unsigned int romDumpSize8Xp = 772;
