@@ -96,4 +96,4 @@ static unsigned char romDump85[] = {
 0x20, 0x6f, 0x66, 0x20, 0x31, 0x32, 0x38, 0x4b, 
 0x00, 0x00, 0x02, 0x00, 0x9d, 0x02, 0x24, 
 };
-static int romDumpSize85 = 767;
+static unsigned int romDumpSize85 = 767;
