@@ -96,4 +96,4 @@ static unsigned char romDump86[] = {
 0x66, 0x20, 0x32, 0x35, 0x36, 0x4b, 0x00, 0x00, 
 0x04, 0x00, 0x28, 0x2b, 
 };
-static int romDumpSize86 = 764;
+static unsigned int romDumpSize86 = 764;
