@@ -209,4 +209,4 @@ static unsigned char romDump89t[] = {
 0x4e,0x75,0x00,0x00,0x06,0x76,0x02,0x5e,0xf3,0x71,
 0x60
 };
-static int romDumpSize89t = 2081;
+static unsigned int romDumpSize89t = 2081;
