@@ -154,4 +154,4 @@ static unsigned char romDump92[] = {
 0x00,0xe8,0x19,0xe4,0xe5,0x00,0x00,0x40,0xdc,0xd6,
 0x77
 };
-static int romDumpSize92 = 1531;
+static unsigned int romDumpSize92 = 1531;
